[package]
name = "ens-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
ethers = "2.0"
regex = "1"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bytes = "1.1"  # Make sure you have the bytes crate if you're working with Bytes objects
substring = "1.4.5"
bs58 = "0.4"
cid = "0.11.1"
anyhow = "1.0.82"
futures = "0.3"